tests/errors/break_outside_control_flow.dang
# break is only valid inside a block-taking call
break
